feat: implement product update api
