# docs/swagger.yaml
@@ -31,6 +31,8 @@ definitions:
     - name
     - price
     type: object
+  dto.UpdateProductRequest:
+    type: object
   response.Response:
     properties:
       data: {}
@@ -74,7 +76,50 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
       summary: Create a new product
+      tags:
+      - product
+  /v1/product/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: Update only the fields that are sent in the request body
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Fields to update
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateProductRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Update a product
       tags:
       - product
 swagger: "2.0"
